--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,27 +1,31 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
+@import url("https://fonts.googleapis.com/css2?family=Road+Rage&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
 
 html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  min-height: 100vh;
+  color: #fff;
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background: radial-gradient(
+      52.52% 32.71% at 50% 97.66%,
+      rgba(36, 160, 181, 0.2) 0%,
+      rgba(36, 160, 181, 0) 100%
+    ),
+    #02191d;
+}
+
+button {
+  cursor: pointer;
+  background: none;
+  border: none;
+}
+
+@font-face {
+  font-family: "JejuMyeongjo";
+  src: url(../app/fonts/JejuMyeongjo-Regular.ttf);
 }
 
 * {
@@ -35,8 +39,15 @@ a {
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+p {
+  font-family: "Roboto", serif;
+}
+
+.page {
+  position: relative;
+}
+
+.page-container {
+  width: 100%;
+  margin: 146px 0;
 }
