--- a/components/TicketCard/stepTwo.css
+++ b/components/TicketCard/stepTwo.css
@@ -47,6 +47,10 @@
   border-radius: 32px;
   border: 4px solid rgba(36, 160, 181, 0.5);
   background: #0e464f;
+
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center center;
 }
 
 .step-divider {
@@ -115,3 +119,4 @@
 	resize: none;
 	color: #fff;
 }
+
