--- a/components/TicketCard/stepThree.css
+++ b/components/TicketCard/stepThree.css
@@ -122,6 +122,7 @@
   display: flex;
   flex-direction: column;
   gap: 4px;
+  padding: 4px;
 }
 
 .details-div p {
@@ -135,6 +136,7 @@
   font-family: "Roboto", serif;
   color: #fff;
   font-size: 12px;
+  width: 100%;
 }
 
 .step-three-ticket__details {
@@ -167,4 +169,12 @@
 
 .step-three-ticket__bar-code img {
   width: 100%;
+}
+
+.step-three__buttons {
+  display: flex;align-items: center;gap: 24px;
+}
+
+.step-three__buttons button {
+  flex: 1;
 }
